# pydantic-agent-with-skills

./: .dockerignore  .env.example  .gitignore  AGENT-TEAM-GUIDE.md  CLAUDE.md  DEPLOYMENT.md  LEARNINGS.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/agents/: architecture-designer.md  builder.md  documenter.md  feature-team-coordinator.md  hypothesis-team-coordinator.md  orchestrator.md  plan-execute-coordinator.md  prd-team-coordinator.md  requirements-extractor.md  research-swarm-coordinator.md  researcher.md  review-team-coordinator.md  reviewer.md  risk-assessor.md  skill-builder.md  system-architect.md  task-decomposer.md  technical-researcher.md  tester.md
.claude/rules/: agent-system.md  coding-principles.md  common-pitfalls.md  configuration.md  documentation-style.md  mandatory-practices.md  security.md  skill-system.md  testing-patterns.md
.claude/team-comms/: interfaces.md  messages.md  status.md
.github/workflows/: ci.yml
deploy/railway/: Procfile  railway.toml
deploy/render/: render.yaml
docker/: .dockerignore  Dockerfile  Dockerfile.worker  docker-compose.test.yml  docker-compose.yml  entrypoint.sh
integrations/: __init__.py  base.py  events.py  models.py  registry.py
integrations/slack/: __init__.py  adapter.py  webhook.py
integrations/telegram/: __init__.py  adapter.py  webhook.py
plan/: multi-agent-platform.md
plan/phases/: README.md  phase-01-database-foundation.md  phase-02-bulletproof-memory.md  phase-02-tasks.md  phase-03-redis-caching.md  phase-03-tasks.md  phase-04-auth-api.md  phase-04-tasks.md  phase-05-sse-streaming.md  phase-05-tasks.md  phase-06-background-processing.md  phase-06-task-decomposition.md  phase-07-agent-collaboration.md  phase-07-task-breakdown-ATOMIC.md  phase-08-docker-deployment.md  phase-09-platform-integrations.md
plan/sql/: schema.sql
reports/prd/: architecture.md  final-prd.md  phase7-architecture.md  phase7-final-prd.md  phase7-research.md  phase7-task-tree.md  requirements.md  task-tree.md  technical-research.md
scripts/: check-diagnostics.sh  check-grep-mcp.sh  run_full_validation.py  setup-agent-team.sh  test_agent.py  validate-agent-output.sh  validate_skills.py
src/: agent.py  cli.py  dependencies.py  http_tools.py  prompts.py  providers.py  settings.py  skill_loader.py  skill_tools.py  skill_toolset.py
src/api/: __init__.py  app.py  dependencies.py
src/auth/: __init__.py  api_keys.py  dependencies.py  jwt.py  password.py  permissions.py
src/cache/: __init__.py  client.py  embedding_cache.py  hot_cache.py  rate_limiter.py  working_memory.py
src/collaboration/: __init__.py  models.py
src/db/: __init__.py  base.py  engine.py
system/: agent-team-build-existing.md  agent-team-build-greenfield.md  agent-team-build-lite.md  project_report.md  prompts.md  unified-agent-team  video_script.md
team-registry/: README.md  competing-hypotheses-team.md  cross-layer-feature-team.md  parallel-review-team.md  plan-then-execute-team.md  prd-decomposition-team.md  research-swarm-team.md  teams.md
tests/: test_agent.py  test_skill_tools.py
workers/: __init__.py  celery_app.py  schedules.py  utils.py
(+206 files in other folders)
